# nhentai_archivist

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  all_threads_done.py  changelog.txt  compile & run test.bat  compile & run.bat  compile test.bat  compile.bat  convert_jpg_to_pdf.py  cookies.json  docker-compose.yaml  download_hentai.py  download_page.py  downloadme.txt  get_h_ID_list.py  licence.md  main old.py  main.py  main_outer.py  pyproject.toml  readme.md  readme.txt  readme.typ  requirements.txt  test.py  todo.txt  update dependencies.bat  update dependencies.sh
.github/ISSUE_TEMPLATE/: Bug Report.yaml  Feature Request.yaml
.github/workflows/: Build and Deploy.yml  on tag deploy on GitHub.yaml  on tag deploy on Github.yaml  on tag deploy on github.yaml
Favoriten/: 144623 Ne~ Niichan.pdf - Verknüpfung.lnk  160750 Ichaicha Konekone Lovelove.pdf - Verknüpfung.lnk  177013 Metamorphosis.pdf - Verknüpfung.lnk  212679 Futanari Blend.pdf - Verknüpfung.lnk  271048 Daisuki I Love You.pdf - Verknüpfung.lnk  289276 Rem to Ichakora Seikatsu.pdf - Verknüpfung.lnk  376136 Futari Asobi.pdf - Verknüpfung.lnk
KFS/: log.py
config/: settings.json
db/: schema.txt
db_migrations/: 001_3.0.0.sql
src/: Hentai.py  api_response.rs  comicinfo.rs  comicinfoxml.rs  config.rs  connect_to_db.rs  error.rs  get_hentai_ID_list.py  get_hentai_id_list.rs  hentai.rs  main.py  main.rs  main_inner.rs  main_outer.py  remove_hentai_ID_from_downloadme.py  remove_only_empty_dir.rs  search_api.rs
tests/: test_Hentai.py  test_get_hentai_ID_list.py  test_remove_hentai_ID_from_downloadme.py
