[tool.poetry]
authors      = ["9FS <pray4spam@googlemail.com>"]
description  = ""
license      = "MIT"
name         = ""
package-mode = false                                               # this is an application, not library
readme       = "readme.md"
repository   = "https://github.com/9-FS/2021-11-15-nHentai-to-PDF"
version      = "2.3.0"

[tool.poetry.dependencies]
kfsconfig = "^2.0.0"
kfsfstr   = "^1.0.0"
kfslog    = "^2.0.0"
kfsmedia  = "^2.5.0"
python    = "^3.12.0"

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.0.0"
pytest     = "^8.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]
